--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@tanstack/react-query": "^5.62.3",
         "date-fns": "^4.1.0"
     }
 }
