--- a/react/package.json
+++ b/react/package.json
@@ -13,7 +13,9 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "laravel-echo": "^1.17.1",
     "postcss": "^8.4.41",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
